# scpm

./: appveyor.yml  scpm.cmake
test/demo-glfw-imgui/: CMakeLists.txt  main.cpp
test/demo-glfw-imgui/src/: platform.cpp
test/demo-sdl2-imgui/: CMakeLists.txt  main.cpp
test/demo-sdl2-imgui/src/: platform.cpp  platform.hpp
test/test-boost/: CMakeLists.txt
test/test-code-edit/: CMakeLists.txt  TextEditor.cpp  TextEditor.h  main.cpp
test/test-code-edit/mujs/: CMakeLists.txt  main.cpp
test/test-flatbuffers/: CMakeLists.txt  main.cpp
test/test-glfw-imgui/: CMakeLists.txt  main.cpp
test/test-gnuradio/: main.cpp  main_test.cpp
test/test-gnuradio/src/: radio.cpp  radio.hpp
test/test-libev/: CMakeLists.txt  main.cpp
test/test-libiio/: CMakeLists.txt  pluto_iio.c  pluto_iio.h
test/test-libiio/android/app/: build.gradle
test/test-libiio/android/app/src/androidTest/java/com/oxfe/myapplication/: ExampleInstrumentedTest.java
test/test-libiio/android/app/src/main/cpp/: main.cpp  native-lib.cpp  pluto_iio.c  pluto_iio.h
test/test-libiio/android/app/src/main/java/com/oxfe/myapplication/: MainActivity.java
test/test-libiio/android/app/src/main/res/layout/: activity_main.xml
test/test-libiio/android/app/src/test/java/com/oxfe/myapplication/: ExampleUnitTest.java
test/test-libiio/android/gradle/: libs.versions.toml
test/test-nanosvg/: CMakeLists.txt  main.cpp
test/test-protobuf/: CMakeLists.txt
test/test-python/: CMakeLists.txt  main.cpp
test/test-quickjs/: CMakeLists.txt  main.cpp
test/test-serialport/: CMakeLists.txt  main.cpp
test/test-sfml-imgui/: CMakeLists.txt  main.cpp
test/test-tigervnc/: CMakeLists.txt
