cmake_minimum_required(VERSION 3.13)
project(test)
set(CMAKE_CXX_STANDARD 17)
if (NOT EXISTS ${CMAKE_CURRENT_BINARY_DIR}/scpm.cmake)
	file(DOWNLOAD https://raw.githubusercontent.com/pperehozhih/scpm/master/scpm.cmake ${CMAKE_CURRENT_BINARY_DIR}/scpm.cmake)
endif()
add_subdirectory(mujs)
include(${CMAKE_CURRENT_BINARY_DIR}/scpm.cmake)
scpm_install(imgui_sfml)
include_directories(SYSTEM "${scpm_root_dir}/include")
link_directories("${scpm_root_dir}/lib")
add_executable(${PROJECT_NAME} main.cpp TextEditor.cpp TextEditor.h)
target_link_libraries(${PROJECT_NAME} optimized mujs)
target_link_libraries(${PROJECT_NAME} debug mujs)

target_include_directories(${PROJECT_NAME} PUBLIC mujs)
scpm_link_target(TARGET ${PROJECT_NAME} LIBS imgui_sfml)
